.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Fixed bad internationalized messages in logged_out.pt
  [vincentfretin]

- Changed default message for label_show_all msgid from "Show all..." to
  "Show all items" in livesearch_reply.py to be the same as in folder_contents
  view which use the same msgid.
  [vincentfretin]  

- Use the new ``pas_member`` view in the overview templates. This avoids
  getting the member info for each item in the listing from the PAS internals.
  [hannosch]

- registerNotify and mailPassword now send properly encoded emails.
  Fixes http://dev.plone.org/old/plone/ticket/9659
  [alecm]

- Deprecated register.py and join_form.cpt. This functionality has been moved 
  to plone.app.users.
  [esteele]

- Changed ``listActions`` on the workflow tool to no longer call the
  ``listGlobalActions`` method on every installed workflow. This method would
  internally call and calculate the worklist (reviewer_queue) for every
  workflow. The listActions method is called by the workflow menu to show the
  state drop down menu on almost all pages.
  [hannosch]

- Deprecated the ``selectedTabs`` script in favor of a method on the
  GlobalSectionsViewlet.
  [hannosch]

- Micro-optimize the CatalogNavigationTabs view.
  [hannosch]

- Added a more prominent upgrade warning to the top of the ZMI screen, instead
  of the old tiny note on the portal migration tool.
  [hannosch]

- Added a new ``@@plone-upgrade`` view, which replaces the old migration tool
  DTML ZMI screens.
  [hannosch]

- Added a simple ``advanced`` mode to the add site form. If advanced is passed
  as a query argument to the ``@@plone-addsite`` more options are available.
  The button in the ZMI uses the advanced mode by default. Currently the choice